# Raddar-app

./: .gitignore  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_WEB.md
raddar-web/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
raddar-web/alembic/: env.py
raddar-web/alembic/versions/: 406063f3b39a_add_event_indexes.py  6ead541c12d8_add_created_by_to_events.py  fc55c0538932_initial_schema.py
raddar-web/app/: config.py  main.py  middleware.py  models.py
raddar-web/app/api/: bookmarks.py  events.py  session.py
raddar-web/app/auth/: deps.py  providers.py  routes.py
raddar-web/app/core/: geo.py  service.py  temporal.py
raddar-web/app/db/: base.py  deps.py  orm.py  postgres.py  repository.py  users.py
raddar-web/app/pipeline/: geocode.py  http.py  normalize.py  run.py  schedule.py  schema.py  scrapers.py  sources.py  writer.py
raddar-web/app/pipeline/fixtures/: dublin_sample.json  scrape_targets.json
raddar-web/app/templates/: base.html  city.html  event_detail.html  map.html  me.html  mock_consent.html
raddar-web/app/web/: routes.py
raddar-web/scripts/: eventbrite_org.py  seed_db.py
raddar-web/static/: manifest.webmanifest  sw.js
raddar-web/static/css/: styles.css
raddar-web/static/js/: bookmark.js  host.js  map.js  me.js  pins.js  urgency.js
raddar-web/tests/: conftest.py  test_airtable_repository.py  test_auth_and_bookmarks.py  test_discovery.py  test_eventbrite_source.py  test_hardening.py  test_host_events.py  test_pipeline.py  test_postgres.py  test_scraper_source.py
(+3 files in other folders)
